--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,13 +1,21 @@
 {% extends 'index-corporate.html' %}
 {% block contenido %}
+    <section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 align-self-center p-static order-2 text-center">
+                    <h1 class="text-dark font-weight-bold text-8">Contactanos</h1>
+                    <span class="sub-title text-dark">
+                        LLena este sencillo formulario en breve nos comunicaremos contigo!
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container py-4">
 
         <div class="row mb-2">
             <div class="col">
-
-                <h2 class="font-weight-bold text-7 mt-2 mb-0">Contactanos</h2>
-                <p class="mb-4">LLena este sencillo formulario en breve nos comunicaremos contigo!</p>
-
                 <form class="contact-form-recaptcha-v3" action="" method="POST"
                       novalidate="novalidate">
                     {% csrf_token %}
@@ -58,8 +66,9 @@
                     <li><i class="fas fa-map-marker-alt top-6"></i> <strong>Dirección:</strong>
                         {{ configuracion.direccion }}
                     </li>
-                    <li><i class="fas fa-phone top-6"></i> <strong>Telefono:</strong> {{configuracion.telefono}}</li>
-                    <li><i class="fas fa-envelope top-6"></i> <strong>Email:</strong> <a href="mailto:{{ configuracion.email}}">{{ configuracion.email}}</a>
+                    <li><i class="fas fa-phone top-6"></i> <strong>Telefono:</strong> {{ configuracion.telefono }}</li>
+                    <li><i class="fas fa-envelope top-6"></i> <strong>Email:</strong> <a
+                            href="mailto:{{ configuracion.email }}">{{ configuracion.email }}</a>
                     </li>
                 </ul>
 
@@ -70,7 +79,8 @@
 
                 <h4 class="pt-5">Horario <strong>de Atención</strong></h4>
                 <ul class="list list-icons list-dark mt-2">
-                    <li><i class="far fa-clock top-6"></i> Lunes a Viernes - {{ configuracion.lunes_viernes_horario }}</li>
+                    <li><i class="far fa-clock top-6"></i> Lunes a Viernes - {{ configuracion.lunes_viernes_horario }}
+                    </li>
                     <li><i class="far fa-clock top-6"></i> Sábado - {{ configuracion.sabado_horario }}</li>
                     <li><i class="far fa-clock top-6"></i> Domingo - {{ configuracion.domingo_horario }}</li>
                 </ul>
