--- a/templates/prueba_pago.html
+++ b/templates/prueba_pago.html
@@ -20,6 +20,11 @@
     <th style="text-align: center">Ver Comprobante</th>
     </thead>
     <tbody>
+    {% if not deudas %}
+    <tr>
+    <td colspan="4">El cliente no registra deudas con Nodusnet <a href="/">Click aqui para regresar</a></td>
+    </tr>
+    {% endif %}
         {% for deuda in deudas %}
         <tr>
             <td style="text-align:  center">{% if deuda.referencia %}
