Cambios en el Inicio

--- a/templates/prueba_pago.html
+++ b/templates/prueba_pago.html
@@ -41,7 +41,7 @@
                     <a class="btn btn-primary" href="#" onclick='pagar("{{ deuda.id }}","{{ deuda.cliente }}","{{ deuda.descripcion }}","{{ deuda.valor }}".replace(",","."))'>Por Pagar</a>
                 {% endif %}
             </td>
-            <td style="text-align: center"><a href="" class="btn btn-secondary"><i class="fa fa-print"></i> Ver Comprobante</a></td>
+            <td style="text-align: center"><a href="{% url 'reporte' %}?id={{ deuda.id }}" class="btn btn-secondary"><i class="fa fa-print"></i> Ver Comprobante</a></td>
 
         </tr>
         {% endfor %}
