--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -6,7 +6,7 @@
     <title>Reporte de las transacciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="container">
 <div class="card" style="width: 18rem;">
   <img src='/static/nodusnet/NODUSNET-02.png' class="card-img-top" alt="...">
   <div class="card-body">
