Cambios en el Inicio

--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -9,8 +9,8 @@
 </head>
 <body class="container">
 <div class="row py-4">
-    <div class="card col-lg-6 col-md-6">
-        <img src='/static/nodusnet/NODUSNET-02.png' class="card-img-top" alt="...">
+    <div class="card col-lg-6 col-md-6" style="padding: 0px">
+        <img src='/static/nodusnet/NODUSNET-02.png' class="card-img-top" style="width: 100%" alt="...">
         <div class="card-body">
             <h5 class="card-title" style="text-align: center">$ {{ pago.valor }}</h5>
             <p class="card-text text-center">{{ pago.descripcion|upper }}</p>
