Cambios en el Inicio

--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container">
 <div class="row py-4">
-    <div class="card col-lg-6 col-md-6" style="padding: 0px">
+    <div style="padding: 0px; margin: 0 auto">
         <img src='/static/nodusnet/NODUSNET-02.png' class="card-img-top" style="width: 100%" alt="...">
         <div class="card-body">
             <h5 class="card-title" style="text-align: center">$ {{ pago.valor }}</h5>
