--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Reporte de las transacciones</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body class="container">
-<div class="row py-4">
+{% extends 'index-corporate.html' %}
+{% block contenido %}
+    <section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 align-self-center p-static order-2 text-center">
+                    <h1 class="text-dark font-weight-bold text-8">Detalle de la Transacción</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container py-4">
+<div class="row">
     <div style="padding: 0px; margin: 0 auto">
-        <img src='/static/nodusnet/NODUSNET-02.png' class="card-img-top" style="width: 100%" alt="...">
         <div class="card-body">
             <h5 class="card-title" style="text-align: center">$ {{ pago.valor }}</h5>
             <p class="card-text text-center">{{ pago.descripcion|upper }}</p>
@@ -48,5 +49,6 @@
         </div>
     </div>
 </div>
-</body>
-</html>
+    </div>
+{% endblock %}
+
