--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div style="padding: 0px; margin: 0 auto">
                 <div class="card-body">
-                    <h2 class="card-title" style="text-align: center">$ {{ pago.valor }}</h2>
+                    <h1 class="card-title" style="text-align: center; font-weight: bold">$ {{ pago.valor }}</h1>
                     <p class="card-text text-center">{{ pago.descripcion|upper }}</p>
                     <table class="table table-striped">
                         <tr>
