Cambios en el Inicio

--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -31,7 +31,7 @@
                         </tr>
                         <tr>
                             <td style="font-weight: bold">Fecha de creación</td>
-                            <td>{% if pago.estado == "Pagado" %}{{ pago.fecha }}{% endif %}</td>
+                            <td>{{ pago.fecha }}</td>
                         </tr>
                         <tr>
                             <td style="font-weight: bold">Fecha de pago</td>
