Cambios en el Inicio

--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -22,8 +22,7 @@
                         </tr>
                         <tr>
                             <td style="font-weight: bold">Razon Social</td>
-                            <td>{% if pago.cliente.razon_social %}{{ pago.cliente.razon_social }}{% else %}
-                                {{ pago.cliente.nombres }} {{ pago.cliente.apellidos }}{% endif %}</td>
+                            <td>{{cliente}}</td>
                         </tr>
                         <tr>
                             <td style="font-weight: bold">Estado</td>
