Cambios en el Inicio

--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -22,7 +22,7 @@
                         </tr>
                         <tr>
                             <td style="font-weight: bold">Razon Social</td>
-                            <td>{{cliente}}</td>
+                            <td>{{pago.cliente}}</td>
                         </tr>
                         <tr>
                             <td style="font-weight: bold">Estado</td>
