Cambios en el Inicio

--- a/templates/prueba_pago.html
+++ b/templates/prueba_pago.html
@@ -69,7 +69,7 @@
             clientTransactionId: idtransaccion(),
             reference:"",
             responseUrl: "https://nodusnetsa.ec/ok",
-            cancellationUrl: "https://nodusnetsa.ec/cash/",
+            cancellationUrl: "https://nodusnetsa.ec/cash/?cliente={{ cliente.cedula }}",
         }
 
         function pagar(id,cliente,referencia,valor) {
